--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML5>
 <head>
     <html lang="zh-cn"/>
+    <meta charset="UTF-8"/>
+    <title>这是一个拿来和朋友联机我的世界的网站</title>
 </head>
 <body>
-    <p>asdasd</p>
+    <p>仅仅拿来自动更新整合包</p>
+    <p>还有存放小龙虾家具中的电视的GIF</p>
+    <a href="test.txt" download="test.txt">
+        <p>点此下载最新版整合包</p>
+    </a>
 </body>
