--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
     <p>仅仅拿来自动更新整合包</p>
     <p>还有存放小龙虾家具中的电视的GIF</p>
-    <a href="test.txt" download="test.txt">
+    <a href="modpack/index.html">
+        <p>点此跳转更新日志页面</p>
+    </a>
+    <a href="modpack/3.1b2整合包.zip" download="modpack/3.1b2整合包.zip">
         <p>点此下载最新版整合包</p>
     </a>
 </body>
